[gd_scene load_steps=2 format=2]

[ext_resource path="res://Stats.gd" type="Script" id=1]

[node name="Stats" type="Panel" groups=[
"Stats",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1504.0
margin_bottom = -1012.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="RevenueEarned" type="MarginContainer" parent="VBoxContainer"]
margin_right = 396.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="VBoxContainer/RevenueEarned"]
margin_right = 396.0
margin_bottom = 14.0
text = "Player Revenue"

[node name="Value" type="Label" parent="VBoxContainer/RevenueEarned"]
margin_right = 396.0
margin_bottom = 14.0
text = "$0"
align = 2

[node name="Time" type="MarginContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 396.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/Time"]
margin_right = 396.0
margin_bottom = 14.0
text = "Total Time Played"

[node name="Value" type="Label" parent="VBoxContainer/Time"]
margin_right = 396.0
margin_bottom = 14.0
text = "0hrs"
align = 2

[node name="RevenuePerHour" type="MarginContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 396.0
margin_bottom = 50.0

[node name="Value" type="Label" parent="VBoxContainer/RevenuePerHour"]
margin_right = 396.0
margin_bottom = 14.0
text = "$0/hour"
align = 2

[node name="PlayTimer" type="Timer" parent="."]
autostart = true
